# SpxOpDaily

./: .env.example  .gitignore  README.md  module-architecture.md  morning-map-review-push-design.md  pyproject.toml  quant-probability-design.md  slow-poll-lane-design.md  spy-lane-missed-digest-design.md
config/: macro_events.yaml  runtime.local.yaml.example  runtime.yaml
docs/: 0dte-strategy-lifecycle.md  alert-optimization-from-backtest-2026-07-18.md  alert-reasoning-and-strategy-review.md  architecture-plan.md  architecture-review-kangyu.md  call-skew-spread-shadow.md  data-platform-design.md  data-source-decision.md  design-review.md  exposure-cockpit-data-and-ui-audit-2026-07-20.md  exposure-cockpit-validation-2026-07-19.md  greeks-definitions.md  gth-structure-diagnostic-2026-07-22.artifact.json  gth-structure-diagnostic-2026-07-22.html  headless-deployment.md  ibkr-api-research.md  level-decision-shadow.md  level-trigger-pricing.md  market-data-capability-matrix.md  market-data-model.md  market-feature-frames.md  micopedia-agent-guidance.md  micopedia-background-knowledge.md  micopedia-signal-schema.json  notification-architecture.md  operations-acceptance-2026-07-12.md  operations-schedule.md  order-map-design.md  order-map-pricing-backtest-2026-07-13.md  pre-rth-refactor-implementation-plan.md  refactor-architecture-acceptance-plan.md  review-fix-batch1-design.md  review-fix-batch2-design.md  runtime-configuration.md  sampling-engine-design.md  schwab-cloudflare-oauth.md  schwab-gth-streaming-capability.md  schwab-primary-ibkr-fallback.md  schwab-wide-chain-hot-lane-design.md  spring-gamma-v3-research-2026-07-24.artifact.json  (+18 more)
scripts/: backtest-0dte-levels.py  backtest-es-rsi-vix.py  build_spring_gamma_v3_research.py  configure-ibc-secrets.sh  create-schwab-token.sh  generate_options_map_golden_pre_extraction.py  harden-ibkr-api-localhost.sh  ibc-watchdog.sh  install-ibc-service.sh  install-ibc.sh  install-schwab-oauth-service.sh  install-spx-spark-services.sh  install-spxw-surface-live-service.sh  refactor-acceptance-report.py  replay-account-spreads.py  replay-intraday-shock.py  run-24h-service.sh  run-alert-engine.sh  run-alert-profile.sh  run-codex-isolated.sh  run-data-compact.sh  run-data-platform.sh  run-hyperliquid-collector.sh  run-ibkr-collector.sh  run-ibkr-positions.sh  run-ibkr-stream.sh  run-ibkr-trading-hours-report.sh  run-ibkr-verifier.sh  run-intraday-shock-hot-worker.sh  run-iv-surface.sh  run-maintenance-daily.sh  run-maintenance-dry-run.sh  run-maintenance-prune.sh  run-maintenance-purge-mock.sh  run-maintenance-weekly.sh  run-market-features-hot-worker.sh  run-micopedia-guidance.sh  run-mock-collector.sh  run-morning-map.sh  run-openclaw-weixin-keepalive.sh  (+26 more)
systemd/: ibc-gateway.service  ibc-watchdog.service  ibc-watchdog.timer  ibgateway-xvfb.service  spx-ibkr-verifier.service  spx-ibkr-verifier.timer  spx-spark-24h.service  spx-spark-backtest-weekly.service  spx-spark-backtest-weekly.timer  spx-spark-data-compact-weekend.service  spx-spark-data-compact-weekend.timer  spx-spark-data-compact.service  spx-spark-data-compact.timer  spx-spark-ibkr-stream.service  spx-spark-intraday-shock-hot.service  spx-spark-maintenance-daily.service  spx-spark-maintenance-daily.timer  spx-spark-maintenance-weekly.service  spx-spark-maintenance-weekly.timer  spx-spark-market-features-hot.service  spx-spark-morning-map.service  spx-spark-morning-map.timer  spx-spark-notification-delivery.service  spx-spark-openclaw-weixin-keepalive.service  spx-spark-openclaw-weixin-keepalive.timer  spx-spark-order-map-refresh.service  spx-spark-order-map-refresh.timer  spx-spark-order-map-status.service  spx-spark-order-map-status.timer  spx-spark-order-map.service  spx-spark-order-map.timer  spx-spark-post-close-review.service  spx-spark-post-close-review.timer  spx-spark-schwab-marketdata.service  spx-spark-schwab-oauth.service  spx-spark-schwab-reauth-reminder.service  spx-spark-schwab-reauth-reminder.timer  spx-spark-surface-dashboard.service  spx-spark-surface-live.service  spx-spark-surface-replay-warm.service  (+2 more)
tests/: __init__.py  conftest.py  stream_test_helpers.py  test_alert_engine.py  test_alert_profile.py  test_architecture.py  test_atm_reference.py  test_bar_builder.py  test_call_spread_shadow.py  test_config.py  test_confirmed_gate_audit.py  test_decision_consistency.py  test_es_rsi_vix_backtest.py  test_exposure_map.py  test_exposure_surface.py  test_globex_trend.py  test_greek_decision.py  test_greek_reference.py  test_greek_shadow.py  test_gth_dip.py  test_gth_exact_leg_pin.py  test_human_focus.py  test_hyperliquid_collector.py  test_ibkr_capacity_tracker.py  test_ibkr_collector.py  test_ibkr_data_only.py  test_ibkr_farm_health.py  test_ibkr_option_conid_cache.py  test_ibkr_position_alerts.py  test_ibkr_position_watcher.py  test_ibkr_quota_plan.py  test_ibkr_stream_supervisor.py  test_ibkr_trading_hours_report.py  (+97 more)
(+454 files in other folders)
