[project]
name = "spx-spark"
version = "0.1.0"
description = "Near-real-time SPX/SPXW data verifier and alert research system"
requires-python = ">=3.12"
dependencies = [
  "ib-async>=2.0.0",
]

[project.scripts]
spx-spark-alert-profile = "spx_spark.alert_profile:main"
spx-spark-alert-engine = "spx_spark.alert_engine:main"
spx-spark-ibkr-verifier = "spx_spark.ibkr.verifier:main"
spx-spark-ibkr-collector = "spx_spark.ibkr.collector:main"
spx-spark-ibkr-stream = "spx_spark.ibkr.stream_collector:main"
spx-spark-ibkr-trading-hours-report = "spx_spark.ibkr.trading_hours_report:main"
spx-spark-iv-surface = "spx_spark.iv_surface:main"
spx-spark-hyperliquid-collector = "spx_spark.hyperliquid.collector:main"
spx-spark-latest-state = "spx_spark.latest_state:main"
spx-spark-maintenance = "spx_spark.maintenance:main"
spx-spark-micopedia-guidance = "spx_spark.strategy.micopedia:main"
spx-spark-mock-collector = "spx_spark.mock_collector:main"
spx-spark-options-map = "spx_spark.options_map:main"
spx-spark-post-close-review = "spx_spark.post_close_review:main"
spx-spark-polymarket-collector = "spx_spark.polymarket.collector:main"
spx-spark-runtime-mode = "spx_spark.runtime_mode:main"
spx-spark-service-loop = "spx_spark.service_loop:main"
spx-spark-sampling-plan = "spx_spark.sampling:main"
spx-spark-schwab-verifier = "spx_spark.schwab.verifier:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
